<resources>
    <string name="app_name">TAS21</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Activity Main-->
    <string name="bt_iniciar">Iniciar</string>

    <!--Activity Iniciar-->
    <string name="tv1">Informacion del Proyecto</string>
    <string name="et1">Nombre del Proyecto</string>
    <string name="et2">ID transecto</string>
    <string name="bt1">Iniciar</string>
    <string name="bt2">volver</string>

    <!--Activity VistaTransecto-->
    <string name="enviar">Enviar</string>
    <string name="terminar">Terminar</string>
    <string name="latitud">Lat:</string>
    <string name="logitud">Lon:</string>
    <string name="altura">msnm:</string>
    <string name="tiempo">tiempo:</string>

    <!--Activity Consultar-->
    <string name="consultar">Consultar Proyecto</string>
    <string name="editar">Editar</string>

    <string name="limpiar">Limpiar</string>
    <string name="vacio">      - - </string>

    <!--Activity Continuar-->
    <string name="continuar">Continuar Proyecto</string>
    <string name="cantidadtransectos">Cantidad de transectos:</string>
    <string name="inicio">Inicio:</string>
    <string name="finalizacion">Finalizacion:</string>
    <string name="distanciaT">Distancia Total:</string>
    <string name="tiempoT">Tiempo Total:</string>
    <string name="Hmax">Altura max:</string>
    <string name="Hmin">Altura min:</string>
    <string name="riqueza">Riqueza:</string>
    <string name="abundancia">Abundancia:</string>
    <string name="descargar">Descargar</string>
    <string name="eliminar">Eliminar</string>

    <!--ServiceLocation-->
    <string name="notificacion_servicio_titulo">Servicio de ubicacion </string>
    <string name="notificacion_servicio_contenido">Registrando ubicacion para la appliacion TAS21 </string>
    <string name="buscando">buscando</string>

    <!-- VerficarGPS -->
    <string name="mensaje_prender_GPS">Tu GPS debe estar habilitado, Quieres iniciarlo?</string>



</resources>