<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Consultar">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="686dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/spinner_proyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/consultar"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerProyecto"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cantidadtransectos"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/tv_c_transectos"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/vacio"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvv1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inicio" />

            <TextView
                android:id="@+id/tv_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vacio" />

            <TextView
                android:id="@+id/tvv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finalizacion" />

            <TextView
                android:id="@+id/tv_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vacio" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvv3"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/distanciaT" />

        <TextView
            android:id="@+id/tv_distancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vacio" />

        <TextView
            android:id="@+id/tvv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tiempoT" />

        <TextView
            android:id="@+id/tv_tiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vacio" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvv5"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Hmax" />

            <TextView
                android:id="@+id/tv_alturaMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vacio" />

            <TextView
                android:id="@+id/tvv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Hmin" />

            <TextView
                android:id="@+id/tv_alturaMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vacio" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvv7"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/riqueza" />

            <TextView
                android:id="@+id/tv_riqueza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vacio" />

            <TextView
                android:id="@+id/tvv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/abundancia" />

            <TextView
                android:id="@+id/tv_abundancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vacio" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="buscar"
            android:text="@string/buscar" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descargar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminar" />

    </LinearLayout>

</RelativeLayout>