<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/xx"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:textAlignment="center"
    tools:context=".ui.ContinuarIniciar">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv1ci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/et_ci_nombreProyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/et1"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_ci_idTransecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/et2"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/bt_iniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickContinuarIniciar"
            android:text="@string/bt1" />

        <Button
            android:id="@+id/bt_volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickContinuarvolver"
            android:text="@string/bt2" />
    </LinearLayout>
</RelativeLayout>